# slug

./: .bazelignore  .buckconfig  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HACKING.md  LICENSE-MIT  MODULE.bazel  NOTICE  README.md  defs.bzl  kuro.bat  kuro.py  lint_levels.bzl  proto_defs.bzl  slug.bat  slug.py  test.py
app/kuro/: Cargo.toml  transition.bzl
app/kuro/src/: check_user_allowed.rs  lib.rs  panic.rs  process_context.rs
app/kuro/src/commands/: forkserver.rs  internal_test_runner.rs
app/kuro_action_impl/: Cargo.toml
app/kuro_action_impl/src/: context.rs  lib.rs  starlark_defs.rs
app/kuro_action_impl/src/actions/: impls.rs
app/kuro_action_impl/src/context/: copy.rs  download.rs  dynamic_output.rs  run.rs  runfiles_tree.rs  unsorted.rs  write.rs
app/kuro_action_impl/src/dynamic/: attrs.rs  bxl.rs  calculation.rs  deferred.rs  dynamic_actions_callable.rs  dynamic_actions_globals.rs  dynamic_value.rs  (+3 more)
app/kuro_action_impl_tests/: Cargo.toml
app/kuro_action_impl_tests/src/: context.rs  lib.rs
app/kuro_analysis/: Cargo.toml
app/kuro_analysis/src/: analysis.rs  lib.rs
app/kuro_anon_target/: Cargo.toml
app/kuro_anon_target/src/: anon_promises.rs  anon_target_attr.rs  anon_target_attr_coerce.rs  anon_target_attr_resolve.rs  anon_target_node.rs  anon_targets.rs  bxl.rs  promise_artifacts.rs  starlark_defs.rs
app/kuro_artifact/: Cargo.toml
app/kuro_build_api/: Cargo.toml
app/kuro_build_api/src/: actions.rs  analysis.rs  anon_target.rs  artifact_groups.rs  audit_cell.rs  audit_dep_files.rs  audit_output.rs  build.rs  build_signals.rs  bxl.rs  configure_dice.rs  configure_targets.rs  context.rs  dynamic_value.rs  interpreter.rs  keep_going.rs  materialize.rs  spawner.rs  transition.rs
app/kuro_build_api_tests/: Cargo.toml
app/kuro_build_api_tests/src/: lib.rs
app/kuro_build_event_stream/: Cargo.toml  README.md  build.rs
app/kuro_build_event_stream/examples/: bep_diff.rs  decode_bep.rs
app/kuro_build_event_stream/src/: grpc_sink.rs  lib.rs  translate.rs
app/kuro_build_event_stream/tests/: abort.rs  file_sink.rs  roundtrip.rs  translate.rs
app/kuro_build_signals/: Cargo.toml
app/kuro_build_signals/src/: env.rs  node_key.rs
app/kuro_build_signals_impl/: Cargo.toml
app/kuro_build_signals_impl/src/: enhancement.rs  lib.rs  test_signals.rs
app/kuro_bxl/: Cargo.toml
app/kuro_bxl/src/: command.rs  commands.rs  profile_command.rs
app/kuro_bzlmod/: Cargo.toml
app/kuro_bzlmod/src/: cache.rs  extension_execution_dice.rs  extensions.rs  fetch.rs  globals.rs  integrity.rs  lib.rs  lockfile.rs  module_extension_executor.rs  parser.rs  pending_repo_cells.rs  registry.rs  repo_mapping.rs  repo_spec.rs  repository_execution.rs  repository_executor.rs  repository_invocations.rs  resolution.rs  spoke_materialization.rs  starlark_repo_rule_executor.rs  synthetic_repos.rs  types.rs  version.rs
app/kuro_certs/: Cargo.toml
app/kuro_certs/src/: certs.rs  validate.rs
app/kuro_cfg_constructor/: Cargo.toml
app/kuro_cfg_constructor/src/: calculation.rs  lib.rs  registration.rs
app/kuro_cli_proto/: Cargo.toml  build.rs  daemon.proto
app/kuro_cli_proto/src/: lib.rs  new_generic.rs  protobuf_util.rs
app/kuro_client/: Cargo.toml
app/kuro_client/src/: commands.rs  print.rs
app/kuro_client_ctx/: Cargo.toml
app/kuro_client_ctx/src/: argfiles.rs  bazelrc.rs  client_cpu_tracker.rs  client_ctx.rs  client_metadata.rs  command_outcome.rs  common.rs  console_interaction_stream.rs  daemon_constraints.rs  event_log_options.rs  events_ctx.rs  exit_result.rs  final_console.rs  ide_support.rs  immediate_config.rs  lib.rs  path_arg.rs  query_args.rs  startup_deadline.rs  stdin.rs  stdio.rs  stream_util.rs  streaming.rs  subscribers.rs  thread_dump.rs  tokio_runtime_setup.rs  upload_re_logs.rs  version.rs
app/kuro_cmd_audit_client/: Cargo.toml
app/kuro_cmd_audit_client/src/: analysis_queries.rs  cell.rs  classpath.rs  config.rs  configurations.rs  deferred_materializer.rs  dep_files.rs  execution_platform_resolution.rs  file_package.rs  includes.rs  lib.rs  package_values.rs  perf.rs  prelude.rs  providers.rs  starlark.rs  subtargets.rs  visibility.rs
app/kuro_cmd_audit_server/: Cargo.toml
app/kuro_cmd_audit_server/src/: analysis_queries.rs  cell.rs  classpath.rs  config.rs  configurations.rs  deferred_materializer.rs  dep_files.rs  execution_platform_resolution.rs  file_package.rs  includes.rs  lib.rs  package_values.rs  perf.rs  prelude.rs  providers.rs  server.rs  starlark.rs  subtargets.rs  visibility.rs
app/kuro_cmd_completion_client/: Cargo.toml
app/kuro_cmd_completion_client/src/: complete.rs  completion.rs
app/kuro_cmd_completion_client/test_data/: .buckconfig
app/kuro_cmd_debug_client/: Cargo.toml
app/kuro_cmd_debug_client/src/: allocative.rs  allocator_stats.rs  chrome_trace.rs  crash.rs  daemon_dir.rs  dice_dump.rs  eval.rs  exe.rs  file_status.rs  flush_dep_files.rs  heap_dump.rs  internal_version.rs  lib.rs  log_perf.rs  materialize.rs  paranoid.rs  persist_event_logs.rs  set_log_filter.rs  thread_dump.rs  trace_io.rs  upload_re_logs.rs
app/kuro_cmd_docs_client/: Cargo.toml
app/kuro_cmd_docs_client/src/: help_doc.rs  lib.rs  query.rs  starlark.rs  starlark_builtins.rs
app/kuro_cmd_docs_server/: Cargo.toml
app/kuro_cmd_docs_server/src/: builtins.rs  json.rs  lib.rs  starlark_.rs
app/kuro_cmd_log_client/: Cargo.toml
app/kuro_cmd_log_client/src/: critical_path.rs  diff.rs  external_configs.rs  lib.rs  path_log.rs  replay.rs  show_log.rs  show_user_log.rs  summary.rs  what_cmd.rs  what_failed.rs  what_materialized.rs  what_ran.rs  what_up.rs  what_uploaded.rs
app/kuro_cmd_query_server/: Cargo.toml
app/kuro_cmd_query_server/src/: dot.rs  html.rs  lib.rs  query.rs  query_output_format.rs
app/kuro_cmd_rage_client/: Cargo.toml
app/kuro_cmd_rage_client/src/: build_info.rs  dice.rs  manifold.rs  materializer.rs  rage.rs  source_control.rs  system_info.rs
app/kuro_cmd_starlark_client/: Cargo.toml
app/kuro_cmd_starlark_client/src/: debug.rs  lib.rs  lint.rs  typecheck.rs
(+4365 files in other folders)
